# CPP_Simples

./: CMakeLists.txt
alternativeSymbols/: main.cpp
bitFiled/: Main.cpp
